2011-05-31  Oliver Varga  <Varga.Oliver@stud.u-szeged.hu>

Reviewed by Nikolas Zimmermann.

        Invalid color handling is broken for SVG
        https://bugs.webkit.org/show_bug.cgi?id=58531

        Fix invalid color fallback handling. If the fill/stroke attributes computed
        value leads to a an invalid color, inherit the desired color from the parent
        style instead. Matches Opera/FF and SVG 1.1 Second Edition (http://www.w3.org/TR/SVG/).

        * platform/chromium-linux/svg/custom/invalid-fill-expected.txt:
        * platform/chromium-linux/svg/custom/invalid-fill-hex-expected.txt:
        * platform/chromium-linux/svg/custom/invalid-stroke-hex-expected.txt: Added.
        * platform/chromium-linux/svg/custom/invalid-uri-stroke-expected.txt: Added.
        * platform/mac/svg/custom/invalid-fill-expected.png:
        * platform/mac/svg/custom/invalid-fill-expected.txt:
        * platform/mac/svg/custom/invalid-fill-hex-expected.png:
        * platform/mac/svg/custom/invalid-fill-hex-expected.txt:
        * platform/mac/svg/custom/invalid-stroke-hex-expected.png: Added.
        * platform/mac/svg/custom/invalid-stroke-hex-expected.txt: Added.
        * platform/mac/svg/custom/invalid-uri-stroke-expected.png: Added.
        * platform/mac/svg/custom/invalid-uri-stroke-expected.txt: Added.
        * platform/qt/svg/custom/invalid-fill-expected.txt:
        * platform/qt/svg/custom/invalid-fill-hex-expected.txt:
        * platform/qt/svg/custom/invalid-stroke-hex-expected.txt: Added.
        * platform/qt/svg/custom/invalid-uri-stroke-expected.txt: Added.
        * svg/custom/invalid-fill-hex.svg:
        * svg/custom/invalid-fill.svg:
        * svg/custom/invalid-stroke-hex.svg: Added.
        * svg/custom/invalid-uri-stroke.svg: Added.
2011-05-31  Oliver Varga  <Varga.Oliver@stud.u-szeged.hu>

        Reviewed by Nikolas Zimmermann.

        Invalid color handling is broken for SVG
        https://bugs.webkit.org/show_bug.cgi?id=58531

        Fix invalid color fallback handling. If the fill/stroke attributes computed
        value leads to a an invalid color, inherit the desired color from the parent
        style instead. Matches Opera/FF and SVG 1.1 Second Edition (http://www.w3.org/TR/SVG/).

        Tests: svg/custom/invalid-stroke-hex.svg
               svg/custom/invalid-uri-stroke.svg

        * rendering/svg/RenderSVGResource.cpp:
        (WebCore::inheritColorFromParentStyleIfNeeded):
        (WebCore::requestPaintingResource):

Canonical link: https://commits.webkit.org/77201@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@87721 268f45cc-cd09-0410-ab3c-d52691b4dbfc